filter by category front end listing

--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -14,5 +14,6 @@
   "Delete" : "Elimina",
   "Yes" : "Si",
   "No" : "No",
-  "The offer type has been created successfully." : "Il tipo di offerta è stata create correttamente."
+  "The offer type has been created successfully." : "Il tipo di offerta è stata create correttamente.",
+  "all" : "tutte"
 }
